--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Aryeh
+first_name: Ari
 middle_name: H.
 last_name: Miller
 email: you@example.com
