--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,8 @@ wikidata_id: # your wikidata id
 dblp_url: # your DBLP profile url
 stackoverflow_id: #your stackoverflow id
 
-contact_note: It is best to reach me via email.
+contact_note: >
+  It is best to reach me via email.
 
 google_analytics:  # your google-analytics ID (format: UA-XXXXXXXXX)
 google_site_verification:  # your google-site-verification ID (Google Search Console)
